chore: added comments and README.MD

--- a/main.ipynb
+++ b/main.ipynb
@@ -18,8 +18,6 @@
    ],
    "source": [
     "import json\n",
-    "import sys\n",
-    "from io import BytesIO\n",
     "import spacy\n",
     "from spacy.language import Language\n",
     "import dotenv\n",
@@ -32,7 +30,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_in=sys.argv[1]\n",
     "file_in=''"
    ]
   },
@@ -105,6 +102,26 @@
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "matcher = Matcher(nlp.vocab)\n",
     "# doc=nlp(ext_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 395,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "spacy.lang.en.English"
+      ]
+     },
+     "execution_count": 395,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(nlp)"
    ]
   },
   {
@@ -188,26 +205,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "spacy.tokens.doc.Doc"
-      ]
-     },
-     "execution_count": 385,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(doc)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 384,
    "metadata": {},
    "outputs": [
@@ -230,42 +227,6 @@
     "    print(i)\n",
     "#     # pass"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 386,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 394,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'hello-fd'"
-      ]
-     },
-     "execution_count": 394,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'{}-{}'.format('hello','fd')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
